Client/wwwroot/css/app.css
/* ... */
@media screen and (max-width: 578px) {
  .flow-modal {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: var(--base);
  }
  .flow-modal-inner {
    height: 100%;
    display: flex;
    flex-direction: column;
  }
  .flow-modal-body {
    flex-grow: 1;
    position: relative;
  }
  .flow-modal-footer {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }
  .flow-modal-footer button {
    flex-grow: 1;
    flex-basis: 0;
    margin: auto;
  }
  .flow-modal-footer button + button {
    margin-left: 1rem;
  }
}
.flow-modal-title {
  background: var(--input-background);
  font-weight: var(--bold, 600);
  padding: 0.5rem 1rem;
}

.flow-modal-body {
  margin: 1rem 0;
  padding: 0.5rem 1rem;
}

.flow-modal-footer {
  padding: 0.5rem 1rem;
}

.modal-render .vi-container {
  position: fixed !important;
  height: unset !important;
  top: 4.5rem;
  right: 1rem;
  border: solid 1px var(--border-color);
  border-radius: var(--container-border-radius);
  background: var(--widget-background);
  bottom: 1rem;
  max-width: 56rem;
  width: calc(100% - 2rem);
}
.modal-render .vi-container.large {
  max-width: min(90rem, 100vw - 2rem);
}
.modal-render .vi-container.vi-maximized {
  left: 6.5rem;
  width: unset;
  max-width: unset;
  top: 4rem;
  right: 0.5rem;
  bottom: 0.5rem;
}
.modal-render .vi-container .content {
  padding: 1.5rem 0.5rem;
}
.modal-render .vi-container .fields {
  height: 100%;
  display: flex;
  flex-direction: column;
}
.modal-render .vi-container .fields .tab-description {
  white-space: pre-wrap;
  padding: 0.5rem;
}
.modal-render .vi-container .fields .flow-tabs {
  overflow: hidden;
}
.modal-render .vi-container .fields .flow-tabs .flow-tabs-content {
  overflow: auto;
}
.modal-render .vi-container .fields .row {
  margin-left: 1rem;
  margin-right: 1rem;
}
.modal-render .vi-container .fields .row + .row {
  margin-top: 1rem;
}
.modal-render .vi-container .fields .row.hide-label input[type=text], .modal-render .vi-container .fields .row.hide-label textarea {
  max-width: unset;
}
.modal-render .vi-container .top-row .other {
  display: flex;
  gap: 0.5rem;
}
.modal-render .vi-container .top-row .other button {
  min-width: 7rem;
  width: fit-content;
}
.modal-render .vi-container .blocker {
  position: absolute;
  background: rgba(var(--base-darkest-rgb), 0.6);
}

@media screen and (max-width: 850px) {
  .pointer-add {
    display: none;
  }
}
@media screen and (min-width: 850px) {
  .page.collapsed .pointer-add {
    left: 6px !important;
    z-index: 10;
  }
  .pointer-add {
    position: fixed;
    z-index: 3;
    top: 5rem;
    left: 2rem;
    width: 75px;
    background: var(--accent);
    height: 25px;
    line-height: 25px;
    margin-bottom: 30px;
    text-align: center;
    color: var(--color);
    animation: bounce 1.75s infinite;
    box-shadow: 0 3px 10px rgba(var(--accent-rgb), 0.2);
  }
  .pointer-add:before {
    content: "";
    position: absolute;
    right: -10px;
    top: 0;
    border-top: 12px solid transparent;
    border-bottom: 14px solid transparent;
    border-left: 10px solid var(--accent);
  }
}
@keyframes bounce {
  0% {
    transform: translateX(0);
  }
  50% {
    transform: translateX(-10px);
  }
  100% {
    transform: translateX(0);
  }
}
.flow-bar {
  flex-grow: 1;
  position: relative;
  margin: auto;
  border-radius: 0.5rem;
  overflow: hidden;
  background-color: var(--input-background);
  box-shadow: inset 0 3px 3px 3px rgba(0, 0, 0, 0.2);
}
.flow-bar > div {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
}
.flow-bar .bar-value {
  background: var(--accent);
  box-shadow: inset 0 5px rgba(255, 255, 255, 0.2);
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}
.flow-bar.grew .bar-value {
  background: rgba(var(--color-rgb), 0.2);
}

.html-log .line {
  display: block;
  white-space: pre;
  font-family: monospace;
}
.html-log .line * {
  white-space: pre;
}
.html-log .key {
  color: var(--pink);
}
.html-log .value {
  color: rgba(var(--color-rgb), 0.6);
}
.html-log .http-method {
  color: var(--yellow);
}
.html-log .heading {
  color: var(--info);
}
.html-log .heading .inner {
  color: var(--yellow);
}
.html-log .date {
  color: var(--info);
}
.html-log .quote {
  color: var(--green);
}
.html-log .logtype-INFO {
  color: var(--success);
}
.html-log .logtype-ERRR {
  color: var(--error);
}
.html-log .logtype-WARN {
  color: var(--warning);
}
.html-log .logtype-DBUG {
  color: var(--blue);
}
.html-log .url {
  color: var(--blue);
  text-decoration: underline;
}
.html-log .file {
  color: var(--teal);
}
.html-log .time {
  color: var(--yellow);
}
.html-log .arrow {
  font-weight: var(--bold, 600);
}

@media screen and (max-width: 578px) {
  .html-log .line .line-prefix {
    display: none;
  }
  .vi-container.fullwidth > .content > .log.html-log {
    position: absolute;
    left: 0;
    right: 0;
    top: 0.5rem;
    bottom: 0.5rem;
    overflow: auto;
  }
}
.editor-wrapper .editor {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  max-width: 100%;
  background: var(--base-darker);
  z-index: 6;
  left: 0;
}
.editor-wrapper .editor.maximised {
  width: 100vw !important;
  margin: 0;
  border: none;
}
.editor-wrapper .background-overlay {
  z-index: 5 !important;
}
.editor-wrapper .top-row .other {
  display: flex;
  flex-direction: row;
}
.editor-wrapper .top-row a, .editor-wrapper .top-row button, .editor-wrapper .top-row input {
  margin-left: 0.25rem;
}
/* ... */

